--- a/src/variables.less
+++ b/src/variables.less
@@ -7,3 +7,26 @@
 
 @font-family: 'Roboto', sans-serif;
 @font-family-mono: "Roboto Mono", monospace;
+
+/* Drone Wall Styles */
+
+@white: #FFFFFF;
+@black: #212121;
+
+@bgLight: #EAEAEA;
+@bgDark: #212121;
+
+@shade: #EAEAEA;
+@shadeDark: #757575;
+
+@orgName: #43A047;
+
+@success: #43A047;
+@failure: #E53935;
+
+@running: #00ACC1;
+@spinner: #FBC02D;
+
+@overflow: #795548;
+
+@link: #00ACC1;
